--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macOS files
+.DS_Store
+
 # History files
 .Rhistory
 .Rapp.history
@@ -37,3 +40,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+data/data_raw
